# shared-lib-demo

./: Cargo.toml  rust-toolchain.toml
2022-12-16/: libfirst_shared_lib.dylib
runner/: Cargo.toml  build.rs
runner/src/: main.rs
shared1/: Cargo.toml
shared1/src/: lib.rs
shared2/: Cargo.toml
shared2/src/: lib.rs
sharedinterface/: Cargo.toml
sharedinterface/src/: lib.rs
