[package]
name = "shared1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "shared1lib"
path = 'src/lib.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "*"
sharedinterface = { path = "../sharedinterface" }
